--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -45,8 +45,7 @@ jobs:
     permissions: write-all
     needs: draft-release
     runs-on: ubuntu-latest
-    if: contains(needs.draft-release.outputs.url, 'untagged')
-#    && github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true && contains(needs.draft-release.outputs.url, 'untagged')
     env:
       TAG: ${{ needs.draft-release.outputs.tag }}
     steps:
@@ -62,11 +61,7 @@ jobs:
         with:
           cmd: |
             tag=${{ env.TAG }}
-            new_tag1=${tag:1}
-            new_tag2=$(echo "$tag" | sed "s/[[:alpha:]]//g") yq -i '.version = env(new_tag2)' pubspec.yaml
-#            echo "$tag" | sed "s/[[:alpha:]]//g"
-#            new_tag2=$(echo "v1.2.3" | sed "s/[[:alpha:]]//g")
-#          cmd: yq -i '.version = ${{ env.TAG }}.match('^\d+\.\d+\.\d+(?:[+-]\S+)?$')' pubspec.yaml
+            version=$(echo "$tag" | sed "s/[[:alpha:]]//g") yq -i '.version = env(version)' pubspec.yaml
       - name: Create Pull Request to bump version in pubspec.yaml
         uses: peter-evans/create-pull-request@v5
         with:
